# velo

./: .gitattributes  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
benches/: distance.rs  search.rs
examples/: semantic_search.rs
src/: flat.rs  hnsw.rs  lib.rs  metric.rs  payload.rs  persist.rs  quant.rs  rng.rs  server.rs  simd.rs  store.rs
